- add code for handling weird registration issue (but I cannot reproduce the case from client side...)